--- a/jumpingGame.css
+++ b/jumpingGame.css
@@ -1,2 +1,86 @@
-body{
+#canvas{
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
 }
+#hud{
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+#current-level{
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+#lives-left{
+    position: absolute;
+    top: 0;
+    right: 0;
+}
+#help{
+    position: absolute;
+    top: 0;
+    left: 10px;
+    right: 10px;
+}
+#text{
+    position: absolute;
+    top: 50px;
+    left: 0;
+    right: 0;
+}
+
+#game{
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 400px;
+    width: 320px;
+    background-color: green;
+}
+
+.floor{
+    background-color: black;
+    position: absolute;
+    height: 10px;
+    width: 320px;
+    left: 0;
+}
+
+.hole{
+    background-color: white;
+    width: 32px;
+    height: 10px;
+    position: absolute;
+}
+.critter{
+    background-color: red;
+    width: 16px;
+    height: 30px;
+    position: absolute;
+}
+
+#player{
+    background-color: gray;
+    width: 16px;
+    height: 30px;
+    position: absolute;
+}
+#player.jumping{
+    height: 40px;
+    width: 12px;
+}
+#player.falling{
+    height: 40px;
+    width: 12px;
+}
+#player.stunned{
+    height: 16px;
+    width: 30px;
+    background-color: #555;
+}
+
+
