--- a/jumpingGame.css
+++ b/jumpingGame.css
@@ -62,9 +62,15 @@
     position: absolute;
     background-image: url('monster.png');
     background-position: 0px 0px;
+    background-image: url('monster-right.png');
 }
-.critter.left{
-    background-position: 0px -30px;
+.left{
+    -moz-transform: scaleX(-1);
+    -o-transform: scaleX(-1);
+    -webkit-transform: scaleX(-1);
+    transform: scaleX(-1);
+    filter: FlipH;
+    -ms-filter: "FlipH";    
 }
 
 .player{
@@ -87,11 +93,48 @@
 .player.falling.stunned{
     background-position: -140px -30px;
 }
-.player.left{
-    background-position: -220px -30px;
+.player.running{
+    background-image: url('running.png');
 }
-.player.right{
-    background-position: -35px -30px;
+
+
+
+.animated {
+    -webkit-animation: play .8s steps(8) infinite;
+       -moz-animation: play .8s steps(8) infinite;
+        -ms-animation: play .8s steps(8) infinite;
+         -o-animation: play .8s steps(8) infinite;
+            animation: play .8s steps(8) infinite;
 }
+
+@-webkit-keyframes play {
+    from { background-position: 0px 0px; }
+    to { background-position: -280px 0px;  }
+}
+
+@-moz-keyframes play {
+    from { background-position: 0px 0px; }
+    to { background-position: -280px 0px;  }
+}
+
+@-ms-keyframes play {
+    from { background-position: 0px 0px; }
+    to { background-position: -280px 0px;  }
+}
+
+@-o-keyframes play {
+    from { background-position: 0px 0px; }
+    to { background-position: -280px 0px;  }
+}
+
+@keyframes play {
+    from { background-position: 0px 0px; }
+    to { background-position: -280px 0px;  }
+}
+
+
+
+
+
 
 
