--- a/jumpingGame/jumpingGame.css
+++ b/jumpingGame/jumpingGame.css
@@ -45,7 +45,16 @@ body{
     padding: 0;
 }
 
-
+.paused{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    opacity:0.7;
+    background-color: black;
+    z-index:1000;
+}
 #game{
     position: absolute;
     top: 0;
