--- a/jumpingGame/jumpingGame.css
+++ b/jumpingGame/jumpingGame.css
@@ -59,10 +59,20 @@ body{
     position: absolute;
     top: 0;
     left: 0;
+    width: 213.33px;
     height: 320px;
-    width: 400px;
     background-color: white;
     overflow: hidden;
+    -moz-transform-origin: top left;
+    -o-transform-origin: top left;
+    -webkit-transform-origin: top left;
+    -ms-transform-origin: top left;
+    transform-origin: top left;
+}
+.imagePreloader{
+    position: absolute;
+    left: -1000%;
+    top: -1000%;
 }
 
 .ceiling{
