--- a/jumpingGame/jumpingGame.css
+++ b/jumpingGame/jumpingGame.css
@@ -1,45 +1,10 @@
-#canvas{
-    position: absolute;
-    top: 0;
-    left: 0;
-    bottom: 0;
-    right: 0;
-}
-#hud{
-    position: absolute;
-    top: 0;
-    left: 0;
-}
-#current-level{
-    position: absolute;
-    top: 0;
-    left: 0;
-}
-#lives-left{
-    position: absolute;
-    top: 0;
-    right: 0;
-}
-#help{
-    position: absolute;
-    top: 0;
-    left: 10px;
-    right: 10px;
-}
-#text{
-    position: absolute;
-    top: 50px;
-    left: 0;
-    right: 0;
-}
-
 body{
     position: absolute;
     top: 0;
     left: 0;
     height: 100%;
     width: 100%;
-    background-color: white;
+    background-color: black;
     overflow: hidden;
     margin: 0;
     padding: 0;
@@ -51,7 +16,7 @@ body{
     left: 0;
     width: 100%;
     height: 100%;
-    opacity:0.7;
+    opacity:0.6;
     background-color: black;
     z-index:1000;
 }
@@ -61,7 +26,7 @@ body{
     left: 0;
     width: 213.33px;
     height: 320px;
-    background-color: white;
+    background-color: black;
     overflow: hidden;
     -moz-transform-origin: top left;
     -o-transform-origin: top left;
@@ -71,8 +36,15 @@ body{
 }
 .imagePreloader{
     position: absolute;
-    left: -1000%;
-    top: -1000%;
+    top: 0;
+    left: 0;
+    width: 100px;
+    height: 100px;
+    opacity: 0.1;
+}
+body:after{
+    display:none;
+    content: url(running.png) url(spritesheet_3_tr_2.png);
 }
 
 .ceiling{
@@ -86,17 +58,19 @@ body{
 .hole{
     background-color: white;
     width: 10%;
-    height: 12px;
+    height: 10px;
     position: absolute;
-}
+    box-shadow: 0 0 0 3px white;
+  }
 .critter{
     width: 35px;
     height: 30px;
     position: absolute;
-    background-position: 0px 0px;
-    background-image: url('monster-right.png');
+    background-position: 0 0;
+    background-image: url('monster.png');
 }
 .left{
+    -ms-transform: scaleX(-1);
     -moz-transform: scaleX(-1);
     -o-transform: scaleX(-1);
     -webkit-transform: scaleX(-1);
@@ -111,7 +85,7 @@ body{
     position: absolute;
     z-index:50;
     background-image: url('standing-turning.png');
-    background-position: 0px 0px;
+    background-position: 0 0;
 }
 .player.jumping{
     background-image: url('spritesheet_3_tr_2.png');
