--- a/jumpingGame/jumpingGame.css
+++ b/jumpingGame/jumpingGame.css
@@ -1,3 +1,74 @@
+.transform-origin(@posV_posH){
+    -webkit-transform-origin: @arguments;
+    -moz-transform-origin: @arguments;
+    -ms-transform-origin: @arguments;
+    -o-transform-origin: @arguments;
+    transform-origin: @arguments;
+}
+.transition-property-transform(){
+    -webkit-transition-property: -webkit-transform;
+    -moz-transition-property: -moz-transform;
+    -ms-transition-property: -ms-transform;
+    -o-transition-property: -o-transform;
+    transition-property: transform;
+}
+.transition-duration(@duration){
+    -webkit-transition-duration: @arguments;
+    -moz-transition-duration: @arguments;
+    -ms-transition-duration: @arguments;
+    -o-transition-duration: @arguments;
+    transition-duration: @arguments;
+}
+.transform(@tr){
+    -webkit-transform: @arguments;
+    -moz-transform: @arguments;
+    -ms-transform: @arguments;
+    -o-transform: @arguments;
+    transform: @arguments;
+}
+.animation(@name; @duration; @numSteps; @iterations){
+    -webkit-animation: @name @duration steps(@numSteps) @iterations;
+    -moz-animation: @name @duration steps(@numSteps) @iterations;
+    -ms-animation: @name @duration steps(@numSteps) @iterations;
+    -o-animation: @name @duration steps(@numSteps) @iterations;
+    animation: @name @duration steps(@numSteps) @iterations;
+}
+
+
+// .keyframes(@name, @from, @to) {
+//     @-webkit-keyframes "@name" {
+//         from {@from;}
+//         to {@to;}
+//     }
+//     @-moz-keyframes "@name" {
+//         from {@from;}
+//         to {@to;}
+//     }
+//     @-ms-keyframes "@name" {
+//         from {@from;}
+//         to {@to;}
+//     }
+//     @-o-keyframes "@name" {
+//         from {@from;}
+//         to {@to;}
+//     }
+//     @keyframes "@name" {
+//         from {@from;}
+//         to {@to;}
+//     }
+// }
+
+
+
+
+
+
+
+
+
+
+
+
 body{
     position: absolute;
     top: 0;
@@ -28,21 +99,9 @@ body{
     background-color: black;
     overflow: hidden;
     z-index: 1;
-    -webkit-transform-origin: top center;
-    -moz-transform-origin: top center;
-    -ms-transform-origin: top center;
-    -o-transform-origin: top center;
-    transform-origin: top center;
-    -webkit-transition-property: -webkit-transform;
-    -moz-transition-property: -moz-transform;
-    -ms-transition-property: -ms-transform;
-    -o-transition-property: -o-transform;
-    transition-property: transform;
-    -webkit-transition-duration: 0.5s;
-    -moz-transition-duration: 0.5s;
-    -ms-transition-duration: 0.5s;
-    -o-transition-duration: 0.5s;
-    transition-duration: 0.5s;
+    .transform-origin(top center);
+    .transition-property-transform();
+    .transition-duration(0.5s);
 }
 body:after{
     display:none;
@@ -75,11 +134,7 @@ body:after{
     z-index: 4;
 }
 .left{
-    -ms-transform: scaleX(-1);
-    -moz-transform: scaleX(-1);
-    -o-transform: scaleX(-1);
-    -webkit-transform: scaleX(-1);
-    transform: scaleX(-1);
+    .transform(scaleX(-1));
     filter: FlipH;
     -ms-filter: "FlipH";
 }
@@ -112,14 +167,8 @@ body:after{
     background-image: url('running.png');
 }
 
-
-
 .animated {
-    -webkit-animation: play .8s steps(8) infinite;
-       -moz-animation: play .8s steps(8) infinite;
-        -ms-animation: play .8s steps(8) infinite;
-         -o-animation: play .8s steps(8) infinite;
-            animation: play .8s steps(8) infinite;
+    .animation(play; .8s; 8; infinite);
 }
 
 @-webkit-keyframes play {
