--- a/jumpingGame/jumpingGame.css
+++ b/jumpingGame/jumpingGame.css
@@ -102,6 +102,7 @@ body{
     .transform-origin(top center);
     .transition-property-transform();
     .transition-duration(0.5s);
+    image-rendering: pixelated;
 }
 body:after{
     display:none;
@@ -132,6 +133,7 @@ body:after{
     background-position: 0 0;
     background-image: url('monster.png');
     z-index: 4;
+    image-rendering: pixelated;
 }
 .left{
     .transform(scaleX(-1));
